# perception_camera_app

./: 404.html  CMakeLists.txt  README.md  build.sh  index.html  sitemap.xml
.github/workflows/: document.yaml
docs/: mkdocs.yml
docs/docs/: index.md
include/: buffer.hpp  component.hpp  conversion.hpp  dispatcher.hpp  endpoint.hpp  job.hpp  publisher.hpp  subscriber.hpp
include/image_acquisition/: image_acquisition.hpp
proto/: perception_camera_app.proto
search/: search_index.json
src/: buffer.cpp  component.cpp  conversion.cpp  dispatcher.cpp  endpoint.cpp  job.cpp  main.cpp  publisher.cpp  subscriber.cpp
src/image_acquisition/: image_acquisition.cpp  main.cpp
stylesheets/: extra.css
